fix erreur generation de build